src/styles/global.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  width: 100%;
  height: 100%;
  overflow-x: hidden;
}

body {
  font-family: var(--standard-font-family);
  background-color: var(--primary-bg);
  color: var(--primary-text-color);
}

img {
  width: 100%;
  object-fit: cover;
}

button {
  border: none;
  background-color: none;
  cursor: pointer;
}

a {
  text-decoration: none;
  color: var(--primary-text-color);
}

li {
  list-style: none;
}

span {
  display: inline-block;
}

.hover-underline {
  position: relative;
  padding-bottom: 0.22rem;
}

.hover-underline::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 0.22rem;
  background-color: var(--secondary-bg);
  transform: scaleX(0);
  transform-origin: right;
  transition: transform 300ms ease-in-out;
}

.hover-underline:hover::after {
  transform: scaleX(1);
  transform-origin: left;
}

